<?xml version="1.0"?>
<package format="2">
  <name>hello_world</name>
  <version>0.1.0</version>
  <description>ROS tutorial package to learn the topic</description>
  <author email="sewoong@naver.com">Sewoong Min</author>
  <maintainer email="sewoong@naver.com">Sewoong Min</maintainer>
  <license>GPL</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>  </export>
</package>
